examples/typechecking/effects_subset.an
// Regression for #215
effect Emit a with
    emit: fn a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

filter stream predicate =
    handle stream ()
    | emit x ->
        if predicate x then
            emit x
        resume ()

for_ stream f =
    handle stream ()
    | emit x ->
        f x
        resume ()

main () =
    iota 10
        ~> filter (fn x -> x % 2 == 0)
        ~> for_ print

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// effect Emit a with
//     (emit: (error)): fn a -> Unit
// 
// (iota: fn U32 -> Unit pure) ((n: U32)) =
//     (recur: fn U32 [U32] -> Unit pure) (i: U32) [(n: U32)] =
//         if (<: fn U32 U32 {Cmp U32} -> Bool pure) (i: U32) (n: U32) {(cmp_u32: Cmp U32)} then 
//             (emit: (error)) (i: U32)
//             (recur: fn U32 [U32] -> Unit pure) ((+: fn U32 U32 {Add U32} -> U32 pure) (i: U32) 1 {(add_u32: Add U32)})
//     (recur: fn U32 [U32] -> Unit pure) 0
// 
// (filter: fn _ _ -> _ pure) (stream: _) (predicate: _) =
//     handle (stream: (error)) ()
//     | (emit: (error)) (x: (error)) -> 
//         if (predicate: (error)) (x: (error)) then 
//             (emit: (error)) (x: (error))
//         (resume: (error)) ()
// 
// (for_: fn _ _ -> _ pure) (stream: _) (f: _) =
//     handle (stream: (error)) ()
//     | (emit: (error)) (x: (error)) -> 
//         (f: (error)) (x: (error))
//         (resume: (error)) ()
// 
// (main: fn Unit -> _ pure) () =
//     (for_: fn _ (fn _ {Print _} -> Unit pure) -> _ pure) ((filter: fn Unit (fn I32 -> Bool pure) -> _ pure) ((iota: fn U32 -> Unit pure) 10) (fn (x: I32) -> (==: fn I32 I32 {Eq I32} -> Bool pure) ((%: fn I32 I32 {Mod I32} -> I32 pure) (x: I32) 2 {(mod_i32: Mod I32)}) 0 {(eq_i32: Eq I32)})) (print: fn _ {Print _} -> Unit pure)

// expected stderr:
// examples/typechecking/effects_subset.an:7:9
// 6 |     if i < n then
// 7 |         emit i	// error: `emit` not found in scope
//   |         ^^^^
// 8 |         recur (i + 1)
// 
// examples/typechecking/effects_subset.an:11:5
// 10 | filter stream predicate =
// 11 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 12 |     | emit x ->
// 
// examples/typechecking/effects_subset.an:18:5
// 17 | for_ stream f =
// 18 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 19 |     | emit x ->
// 
// Found 3 errors and 0 warnings

